--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "firebase": "^7.20.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-get-location": "^1.4.3",
     "react-native-image-picker": "^2.3.3",
     "react-native-modal": "^11.5.6",
     "react-native-permissions": "^2.2.0",
@@ -27,6 +29,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-simple-dialogs": "^1.3.0",
+    "react-native-svg": "^12.1.0",
     "react-native-switch": "^2.0.0",
     "react-native-vector-icons": "^7.1.0",
     "typescript": "^4.0.2"
