--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.1.0",
+    "@react-native-firebase/messaging": "^10.1.1",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
@@ -26,6 +27,7 @@
     "react-native-image-picker": "^2.3.3",
     "react-native-modal": "^11.5.6",
     "react-native-permissions": "^2.2.0",
+    "react-native-push-notification": "^6.1.3",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
